--- a/kubernetes/kube-test-container.yaml
+++ b/kubernetes/kube-test-container.yaml
@@ -5,7 +5,7 @@ metadata:
     app: kube-test-container
   name: kube-test-container
 spec:
-  replicas: 5
+  replicas: 1
   selector:
     matchLabels:
       app: kube-test-container
@@ -14,6 +14,10 @@ spec:
       labels:
         app: kube-test-container
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 2000
+        fsGroup: 3000
       containers:
       - name: kube-test-container
         image: sverrirab/kube-test-container:v1.0
