--- a/helm/kube-test-container/values.yaml
+++ b/helm/kube-test-container/values.yaml
@@ -13,8 +13,8 @@ service:
   internalPort: 8000
 resources:
   limits:
-    cpu: 50m
-    memory: 5Mi
+    cpu: "1"
+    memory: 50Mi
   requests:
-    cpu: 10m
-    memory: 1Mi
+    cpu: "1"
+    memory: 10Mi
