--- a/helm/kube-test-container/templates/deployment.yaml
+++ b/helm/kube-test-container/templates/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ .Values.service.name }}
   labels:
-    app: {{ template "fullname" . }}
+    app: {{ .Values.service.name }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: {{ template "fullname" . }}
+      app: {{ .Values.service.name }}
   template:
     metadata:
       labels:
-        app: {{ template "fullname" . }}
+        app: {{ .Values.service.name }}
     spec:
       containers:
       - name: {{ .Chart.Name }}
